--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
   - name: Talks
     url: talk/
     weight: 12
-#  - name: Projects
-#    url: projects/
-#    weight: 30
+  - name: WIT
+    url: wit/
+    weight: 30
 #  - name: Teaching
 #    url: teaching/
 #    weight: 20
