--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -12,10 +12,9 @@ appearance:
 marketing:
   seo:
     site_type: Person
-    local_business_type: 'ResearchOrganization'
-    org_name: 'Leibniz Universität Hannover'
-    description: 'Hi, I'm Nathalie Römer, PhD student at Leibniz University Hannover. 
-    I use empirical methods to study distortions emerging in the generation and evaluation of innovative ideas, with a focus on diversity and gender bias.'
+    local_business_type: ''
+    org_name: ''
+    description: 'Hi, I am Nathalie Römer, PhD researcher at Leibniz University Hannover. I empirically study behavior in innovation-related contexts with a focus on diversity and gender bias.'
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
