--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,12 +13,15 @@ main:
 #  - name: Experience
 #    url: experience/
 #    weight: 12
-  - name: Talks
-    url: talk/
-    weight: 12
   - name: WIT
     url: wit/
+    weight: 12
+  - name: Talks
+    url: talk/
     weight: 13
   - name: CV
     url: cv/
+    weight: 40
+  - name: References
+    url: ref/
     weight: 40
